# Trismegistus

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
agents/: injuries_agent.py  intel_agent.py  news_agent.py  odds_agent.py
api/: __init__.py  app.py  auth.py  schemas.py  services.py
api/routers/: backtest.py  health.py  predictions.py  (+2 more)
config/: intel.yaml  leagues.yaml  settings.py  team_aliases.yaml  team_cities.yaml  worldcup.yaml
data/: worldcup_scraped.csv
docs/: API_COSTS.md  HANDOFF.md  OSS_RESEARCH.md
evaluation/: edge.py  implied_odds.py  kelly.py  metrics.py  odds_lines.py
predictors/: blunder_sniffer.py  calibration.py  dixon_coles_baseline.py  game_forger.py  registry.py
scrapers/: __init__.py  browser.py  injuries_scraper.py  news_scraper.py  oddsportal.py  reddit_scraper.py  youtube_scraper.py
scripts/: archive_chaos.py  backtest.py  build_team_cities.py  calibrate_intel.py  enrichment_roi.py  expand_history.py  fetch_chaos.py  fetch_elo.py  fetch_fbref.py  fetch_odds.py  fetch_referee.py  fetch_statsbomb.py  fetch_xg.py  intel_roi.py  prep_caches.py  scrape_football_data.py  tune_blend.py  tune_dc_blend.py  tune_edge.py  tune_edge_leagues.py  tune_leagues.py  validate_live_predict.py  worldcup_pipeline.py
terminals/: 1.txt  2.txt
tests/: test_api.py  test_backtest.py  test_blend_tune.py  test_blunder_sniffer.py  test_calibrate_intel.py  test_calibration.py  test_chaos_cache.py  test_chaos_pit.py  test_config.py  test_db.py  test_div_filter.py  test_dixon_coles_baseline.py  test_edge.py  test_elo_cache.py  test_enrichment_roi.py  test_expand_history.py  test_fbref_cache.py  test_feature_row_df.py  test_features.py  test_implied_odds.py  test_intel_agent.py  test_intel_override.py  test_intel_roi.py  test_intel_score.py  test_kelly.py  test_live_predict.py  test_metrics.py  test_news_intel.py  test_odds_agent.py  test_odds_agent_scraped.py  test_odds_cache.py  test_odds_lines.py  test_oddsportal_parser.py  test_pit_elo.py  test_pit_features.py  test_pit_shots.py  test_pit_xg.py  test_prep_caches.py  test_registry.py  test_residual_features.py  (+9 more)
utils/: chaos_cache.py  db.py  elo_cache.py  fbref_cache.py  features.py  intel_score.py  odds_cache.py  pit_features.py  statsbomb_cache.py  team_aliases.py  xg_cache.py  xg_sources.py
(+3 files in other folders)
