[tool.poetry]
name = "trismegistus"
version = "0.3.0"
description = "Educational football analytics and match prediction pipeline"
authors = ["Alfred <Drcapable03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.0.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.38"
scikit-learn = "^1.6.1"
python-dotenv = "^1.0.1"
newsapi-python = "^0.2.7"
pyyaml = "^6.0.2"
joblib = "^1.4.2"
scrapling = {version = "^0.4.9", extras = ["fetchers"]}
curl-cffi = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"